projects/compiler/test/typechecker/match/error_exhaustive_type.2.out
Error at %FILE_NAME%:5:3
Unreachable match case
  |    _ => 4
       ^
The previous case(s) cover all possibilities for match target type 'Int?'
